--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js",
-    "start": "node index.js"
+    "server": "nodemon index.js"
   },
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.20.11",
-    "shortid": "^2.2.15",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
